# virtues

./: .gitignore  README.md  pyproject.toml  setup.sh  version_requirements.txt
assets/example_dataset/: .setup.ipynb  channels.csv  crop_index.csv  means.csv  quantiles.csv  sce_annotations.csv  stds.csv  tissue_index.csv
assets/example_dataset/imc/: channels.parquet  channels_per_tissue.parquet
assets/example_dataset/marker_embeddings/: O00585.pt  P01730.pt  P01732.pt  P01903.pt  P02452.pt  P02533.pt  P04275.pt  P05164.pt  P07766.pt  P08138.pt  P08473.pt  P08575-8.pt  P08670.pt  P09619.pt  P11836.pt  P14780.pt  P14902.pt  P19320.pt  P21589.pt  P22083.pt  P24347.pt  P26447.pt  P28906.pt  P34810.pt  P36402.pt  P43121.pt  P46013.pt  P48061.pt  P55285.pt  P55287.pt  P62736.pt  P68431.pt  Q03135.pt  Q12884.pt  Q15116.pt  Q16790.pt  Q86YL7.pt  Q9BZS1.pt  Q9HCU0.pt  Q9Y5Y7.pt
assets/example_dataset/masks/: cords24_ocmzljpb_1.npy
configs/: test_config.yaml
configs/datasets/: example_config.yaml  example_config_multiple_datasets.yaml
configs/spora_datasets/: example_config.yaml
notebooks/: 1_demo_reconstruction.ipynb  2_demo_cell_phenotyping.ipynb  3_demo_segmentation.ipynb
utils/: cell_tokens.py
virtues/: train.py
virtues/data/: multiplex_dataset.py  virtues_dataset.py
virtues/datasets/: multiplex_dataset.py
virtues/modules/: multiplex_virtues.py
virtues/modules/layers/: attention_flashattention.py  mask_utils_flashattention.py  (+1 more)
virtues/utils/: cell_tokens.py  compute_esm_embeddings.py  download_fastas.py  plotting.py  segmentation.py  utils.py
(+10 files in other folders)
