[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtues"
version = "0.1.0"
description = "A foundation-model for spatial proteomics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/bunnelab/virtues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["virtues"]